# SecuBot

./: .env.example  .gitignore  .vercelignore  DEPLOYMENT_VERCEL.md  Guia-setup.md  Makefile  README.md  SLACK_INTEGRATION.md  alert_data.json  docker-compose.yml  pyproject.toml  pytest.ini  requirements-vercel.txt  requirements.txt  test_alert_creation.py  vercel.json
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/: dependencies.py
app/api/v1/: alerts.py  notifications.py  remediations.py  users.py
app/database/: alert_indexes.py  connection.py  gamification_indexes.py  indexes.py  mongodb.py  user_indexes.py
app/database/migrations/: migrate.py
app/database/migrations/versions/: 001_initial_setup.py
app/db/: mongodb.py
app/engines/rule_engine/: __init__.py  action_executor.py  badge_evaluator.py  condition_evaluator.py  engine.py  point_calculator.py
app/engines/rule_engine/condition_evaluator/: __init__.py  evaluator.py  matchers.py  operators.py  parsers.py  resolvers.py  time_evaluator.py
app/engines/rule_engine/loader/: __init__.py  loader.py  models.py  singleton.py  sync.py
app/integrations/notifications/: __init__.py  message_builder.py  slack_client.py
app/models/: alert.py  award.py  badge.py  base.py  logs.py  point_txn.py  remediation.py  rescan_result.py  rule.py  source.py  team.py  user.py
app/schemas/: alert_schemas.py  common_schemas.py  gamification_schemas.py  remediation_schemas.py  user_schemas.py
app/services/: alert_service.py  gamification_service.py  notification_service.py  remediation_service.py  rescan_service.py  user_service.py
app/utils/: logger.py
config/: rules.yaml  settings.py
scripts/: reset_db.py  seed_db.py  test_services.py
tests/unit/engine/: test_complete_flow.py  test_condition_evaluator.py  test_loader.py  test_point_calculator.py  validate_rule_engine.py
