[project]
name = "secubot"
version = "1.0.0"
description = "Sistema de gamificación verificada para DevSecOps"
authors = [
    { name = "Camilo Aguirre", email = "bcamilo.aguirre@udea.edu.co" },
    { name = "Luis Cruz", email = "jose.cruz1@udea.edu.co" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["devsecops", "gamification", "security", "fastapi", "mongodb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# DEPENDENCIAS PRINCIPALES - VERSIONES COMPATIBLES
dependencies = [
    # ===== CORE FRAMEWORK =====
    "fastapi>=0.104.1,<0.105.0",  # Versión específica para compatibilidad
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "starlette>=0.27.0,<0.28.0",
    
    # ===== DATA VALIDATION =====
    "pydantic>=2.5.0,<2.6.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "email-validator>=2.1.0,<3.0.0",  # Separado de pydantic[email]
    
    # ===== DATABASE =====
    "motor>=3.7.0,<4.0.0",      # Async MongoDB
    "pymongo>=4.15.0,<5.0.0",   # Sync MongoDB
    "dnspython>=2.4.0,<3.0.0",
    
    # ===== TASK SCHEDULING =====
    "APScheduler>=3.10.0,<4.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "tzlocal>=5.2.0,<6.0.0",
    
    # ===== HTTP & NETWORKING =====
    "httpx>=0.25.0,<0.26.0",
    "aiohttp>=3.9.0,<4.0.0",
    "websockets>=12.0,<13.0",
    
    # ===== CONFIGURATION & UTILITIES =====
    "python-dotenv>=1.0.0,<2.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    
    # ===== RUNTIME DEPENDENCIES =====
    "anyio>=3.7.0,<4.0.0",      # ¡CRÍTICO! FastAPI 0.104 requiere <4.0.0
    "typing-extensions>=4.8.0,<5.0.0",
    "annotated-types>=0.6.0,<0.8.0",
    "pydantic-core>=2.14.0,<3.0.0",
]

[project.optional-dependencies]
# ===== DESARROLLO =====
dev = [
    # Testing
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "coverage>=7.0.0,<8.0.0",
    
    # Code Quality
    "pre-commit>=3.5.0,<4.0.0",
    "ruff>=0.1.6,<0.2.0",
    "mypy>=1.7.0,<2.0.0",
    "mypy-extensions>=1.0.0,<2.0.0",
    
    # Development Tools
    "ipython>=9.0.0,<10.0.0",
    "watchfiles>=0.21.0,<0.22.0",
    "jedi>=0.19.0,<0.20.0",
    
    # Documentation
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.0.0,<10.0.0",
]

# ===== PRODUCCIÓN =====
prod = [
    "gunicorn>=21.0.0,<22.0.0",
    "uvloop>=0.19.0,<0.20.0",  # Mejor rendimiento para uvicorn
]

# ===== MONITORING =====
monitoring = [
    "prometheus-client>=0.19.0,<0.20.0",
    "structlog>=23.0.0,<24.0.0",
]

[project.urls]
Homepage = "https://github.com/SecuBotUdea/SecuBot"
Repository = "https://github.com/SecuBotUdea/SecuBot"
Documentation = "https://secubot.readthedocs.io/"
Issues = "https://github.com/SecuBotUdea/SecuBot/issues"

[project.scripts]
secubot = "app.main:main"
secubot-api = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
secubot-worker = "app.worker:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools-scm>=8.0.0"]
build-backend = "setuptools.build_meta"

# ===== CONFIGURACIÓN DE PAQUETES =====
[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*", "api*", "models*", "services*", "utils*", "config*"]
exclude = ["tests*", "scripts*", "docs*", "examples*", "benchmarks*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.env.example", "py.typed"]
"app" = ["templates/*", "static/*"]

# ===== CONFIGURACIÓN DE PYTEST =====
[tool.pytest.ini_options]
testpaths = ["tests", "app/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-v",
    "--cov=app",
    "--cov=core",
    "--cov=api",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["app", "core", "api"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/conftest.py",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ===== CONFIGURACIÓN DE RUFF =====
[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "S101",  # Use of assert detected
    "T201",  # Print found
]
unfixable = [
    "F401",  # Unused import
    "F841",  # Unused variable
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/*" = ["S101", "ANN", "T201"]  # Allow asserts and prints in tests
"alembic/versions/*" = ["ALL"]  # Ignore all in migrations

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
indent-width = 4

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true
allow-star-arg-any = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

# ===== CONFIGURACIÓN DE MYPY =====
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
follow_imports = "silent"
ignore_missing_imports = false
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "motor.*",
    "pymongo.*",
    "apscheduler.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

# ===== CONFIGURACIÓN DE PRE-COMMIT =====
[tool.pre-commit]
default_install_hook_types = ["pre-commit", "pre-push"]
default_stages = ["commit", "push"]

[[tool.pre-commit.hooks]]
id = "ruff"
args = ["--fix"]

[[tool.pre-commit.hooks]]
id = "ruff-format"

[[tool.pre-commit.hooks]]
id = "mypy"
args = ["--strict"]

[[tool.pre-commit.hooks]]
id = "pytest"
args = ["--tb=short", "-v"]

# ===== CONFIGURACIÓN PARA RENDER =====
[tool.render]
# Configuración específica para despliegue en Render
build-command = "pip install -e .[prod]"
start-command = "gunicorn app.main:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT --timeout 120"

# ===== METADATOS ADICIONALES =====
[tool.setuptools.scm]
write_to = "app/_version.py"
write_to_template = '__version__ = "{version}"'

# ===== CONFIGURACIÓN DE BLACK (compatibilidad) =====
[tool.black]
target-version = ['py310']
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''